--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <script src="outpur/app.js"></script>
+    "scripts": {
+"start": "http-server -p 8436"
+    }
 </body>
 
 </html>
