--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Comptatible">
+    <meta http-equiv="X-UA-Comptatible" content="IE=Edge">
     <title>documento 11</title>
 
 </head>
